--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,7 @@
-@import './base';
-@import './styles';
+/*
+ * Главный файл стилей.
+ * Все паршалы подключаются сюда.
+ */
+
+// Стили для файла с примером HTML-фрагмента
+@import './example';
