--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -5,7 +5,7 @@
       type="text"
       name="query"
       autocomplete="off"
-      placeholder="Введите запрос..."
+      placeholder="Search images..."
     />
   </form>
 </div>
